--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- /bootstrap icons https://blog.getbootstrap.com/2021/01/07/bootstrap-icons-1-3-0/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <title>Mindful Product</title>
+    <title>Mindful Product Consulting</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <!-- /Navigation Bar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand">Mindful Product</a>
+            <a href="#" class="navbar-brand">Mindful Product Consulting</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -353,7 +353,7 @@
 
     <!-- Contact -->
 
-    <section class="p-5">
+    <section id="contact" class="p-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md">
