--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <img src="img/undraw_product_iteration.svg" class="img-fluid" alt="Certified Man">
                 </div>
                 <div class="col-md p-5">
-                    <h2>Hello, I am Eduardo!</h2>
+                    <h2 class="mb-5">Hello, I am Eduardo!</h2>
                     <p>I am a Product Manager with 10+ years of generalist Product experience in startups and scale-ups
                         in
                         Europe.</p>
@@ -119,7 +119,9 @@
                         impact
                         and
                         support as many companies as possible.</p>
-                    <a href="" class="btn btn-dark mt-3">Read More</a>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">
+                        Get in touch
+                    </button>
                 </div>
             </div>
     </section>
@@ -372,7 +374,13 @@
                             <span class="fw-bold">Medium:</span> <a href="#"><i
                                     class="bi bi-pen-fill text-dark mx-1"></i></a> https://eduardomignot.medium.com/
                         </li>
+
                     </ul>
+                    <h2 class="text-center mb-4 p-5"><button class="btn btn-primary btn-lg text-sm-center"
+                            data-bs-toggle="modal" data-bs-target="#enroll">
+                            Get in touch
+                        </button></h2>
+
                 </div>
                 <div class="col-md">
                     <img src="img/undraw_contact_us.svg" class="img-fluid" alt="Certified Man">
@@ -398,11 +406,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="enrollLabel">Enrollment</h5>
+                    <h5 class="modal-title" id="enrollLabel">Get in touch</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="lead">Fill out this form and I will get back to you</p>
+                    <p class="lead">Tell me how I can help you and I will get back to you</p>
                     <form>
                         <div class="mb-3">
                             <label for="first-name" class="col-form-label">
@@ -415,12 +423,13 @@
                             <input type="email" class="form-control" id="email" />
                         </div>
                         <div class="mb-3">
-                            <label for="subject" class="col-form-label">Subject:</label>
-                            <input type="tel" class="form-control" id="subject" />
+                            <label for="company" class="col-form-label">Company:</label>
+                            <input type="tel" class="form-control" id="company" />
                         </div>
                         <div class="mb-3">
                             <label for="content" class="col-form-label">What I can help you with?</label>
-                            <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="10"></textarea>
+                            <textarea class="form-control rounded-0" id="exampleFormControlTextarea1"
+                                rows="5"></textarea>
                         </div>
                     </form>
                 </div>
